tests/reject/named_assumption_without_turnstile.alg
var b : 𝔹;
axiom bad h := b;
